--- a/resource/skill_sound.yaml
+++ b/resource/skill_sound.yaml
@@ -935,3 +935,34 @@ skill_rourenchuanci: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_003.mp
 skill_qianglijuanjin: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_002.mp3'
 skill_shaduchuantou: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_001.mp3'
 skill_shaduhongxue: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_002.mp3'
+skill_mengji: 'https://seer2-resource.yuuinih.com/sound/skill/07_1_002.mp3'
+skill_yingyongjianxiao: 'https://seer2-resource.yuuinih.com/sound/skill/07_3_003.mp3'
+skill_tongjiling: 'https://seer2-resource.yuuinih.com/sound/skill/07_1_003.mp3'
+skill_kongjingtuxi: 'https://seer2-resource.yuuinih.com/sound/skill/07_1_003.mp3'
+skill_yiduanyazhi: 'https://seer2-resource.yuuinih.com/sound/skill/07_2_002.mp3'
+skill_kongjingweijiao: 'https://seer2-resource.yuuinih.com/sound/skill/07_1_002.mp3'
+skill_kongxijingjie: 'https://seer2-resource.yuuinih.com/sound/skill/07_1_001.mp3'
+skill_kongjingzhansha: 'https://seer2-resource.yuuinih.com/sound/skill/07_1_001.mp3'
+skill_yiduanjielan: 'https://seer2-resource.yuuinih.com/sound/skill/07_2_001.mp3'
+skill_kongjingqianna: 'https://seer2-resource.yuuinih.com/sound/skill/07_1_003.mp3'
+skill_yiduanzhuiji: 'https://seer2-resource.yuuinih.com/sound/skill/07_2_002.mp3'
+skill_kongzhongjianyu: 'https://seer2-resource.yuuinih.com/sound/skill/10967.mp3'
+skill_kongjinglianxi: 'https://seer2-resource.yuuinih.com/sound/skill/07_1_002.mp3'
+skill_yingyongyizhi: 'https://seer2-resource.yuuinih.com/sound/skill/07_3_002.mp3'
+skill_fatingzhinu: 'https://seer2-resource.yuuinih.com/sound/skill/07_2_003.mp3'
+skill_zuizhongshenpan: 'https://seer2-resource.yuuinih.com/sound/skill/07_3_001.mp3'
+skill_chengjizitai: 'https://seer2-resource.yuuinih.com/sound/skill/07_3_003.mp3'
+skill_kaowenzhe: 'https://seer2-resource.yuuinih.com/sound/skill/07_2_003.mp3'
+skill_jijiangfa: 'https://seer2-resource.yuuinih.com/sound/skill/07_2_001.mp3'
+skill_kaowenzhuoji: 'https://seer2-resource.yuuinih.com/sound/skill/07_1_002.mp3'
+skill_guhuofa: 'https://seer2-resource.yuuinih.com/sound/skill/07_2_002.mp3'
+skill_yanshouzitai: 'https://seer2-resource.yuuinih.com/sound/skill/07_3_002.mp3'
+skill_dajifa: 'https://seer2-resource.yuuinih.com/sound/skill/07_2_001.mp3'
+skill_kaowensilie: 'https://seer2-resource.yuuinih.com/sound/skill/07_1_001.mp3'
+skill_weixiafa: 'https://seer2-resource.yuuinih.com/sound/skill/07_1_002.mp3'
+skill_kaowenlianfa: 'https://seer2-resource.yuuinih.com/sound/skill/07_2_003.mp3'
+skill_xinlingzhenbao: 'https://seer2-resource.yuuinih.com/sound/skill/10998.mp3'
+skill_tongjilianxie: 'https://seer2-resource.yuuinih.com/sound/skill/07_2_002.mp3'
+skill_bileiyanshen: 'https://seer2-resource.yuuinih.com/sound/skill/07_3_002.mp3'
+skill_fangkongdong: 'https://seer2-resource.yuuinih.com/sound/skill/07_3_003.mp3'
+skill_zuizhongcaijue: 'https://seer2-resource.yuuinih.com/sound/skill/07_2_001.mp3'
