--- a/data/skill.yaml
+++ b/data/skill.yaml
@@ -1158,7 +1158,7 @@
   ignoreShield: false
   tags: []
   effect:
-    - effect_skill_add_mark_tanhuan_10
+    - effect_skill_add_mark_opponent_tanhuan_10_percent
 - id: skill_tizhongzhishang
   element: Normal
   category: Physical
@@ -10973,3 +10973,379 @@
   tags: []
   effect:
     - effect_skill_add_mark_opponent_shaduhongxue
+- id: skill_mengji
+  element: Normal
+  category: Physical
+  target: opponent
+  power: 40
+  accuracy: 100
+  rage: 0
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_opponent_def_1_stage_5_percent
+- id: skill_yingyongjianxiao
+  element: Normal
+  category: Status
+  target: self
+  power: 0
+  accuracy: 100
+  rage: 10
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_raise_atk_1_stage
+- id: skill_tongjiling
+  element: Flying
+  category: Physical
+  target: opponent
+  power: 70
+  accuracy: 95
+  rage: 10
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_opponent_tongjiling
+- id: skill_kongjingtuxi
+  element: Flying
+  category: Physical
+  target: opponent
+  power: 55
+  accuracy: 95
+  rage: 15
+  sureHit: false
+  ignoreShield: false
+  priority: 1
+  tags: []
+  effect: []
+- id: skill_yiduanyazhi
+  element: Flying
+  category: Special
+  target: opponent
+  power: 90
+  accuracy: 95
+  rage: 20
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_opponent_def_1_stage_35_percent
+- id: skill_kongjingweijiao
+  element: Flying
+  category: Physical
+  target: opponent
+  power: 90
+  accuracy: 95
+  rage: 20
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_sure_hit_if_opponent_has_tongjiling
+- id: skill_kongxijingjie
+  element: Normal
+  category: Status
+  target: self
+  power: 0
+  accuracy: 95
+  rage: 20
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_raise_def_1_stage
+    - effect_skill_raise_spd_1_stage_if_opponent_has_tongjiling
+- id: skill_kongjingzhansha
+  element: Flying
+  category: Physical
+  target: opponent
+  power: 75
+  accuracy: 95
+  rage: 15
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_power2x_if_opponent_has_tongjiling_and_below_half_hp
+- id: skill_yiduanjielan
+  element: Flying
+  category: Special
+  target: opponent
+  power: 90
+  accuracy: 95
+  rage: 20
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_opponent_spe_1_stage_35_percent
+- id: skill_kongjingqianna
+  element: Flying
+  category: Physical
+  target: opponent
+  power: 80
+  accuracy: 95
+  rage: 15
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_opponent_tanhuan_30_percent
+- id: skill_yiduanzhuiji
+  element: Flying
+  category: Special
+  target: opponent
+  power: 85
+  accuracy: 95
+  rage: 15
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_raise_spe_1_stage_if_opponent_has_tongjiling_on_defeated
+- id: skill_kongzhongjianyu
+  element: Flying
+  category: Climax
+  target: opponent
+  power: 165
+  accuracy: 100
+  rage: 100
+  sureHit: true
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_opponent_kongju_20_percent
+- id: skill_kongjinglianxi
+  element: Flying
+  category: Physical
+  target: opponent
+  power: 30
+  accuracy: 95
+  rage: 20
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_multihit_3_times_if_opponent_has_tongjiling
+- id: skill_yingyongyizhi
+  element: Normal
+  category: Status
+  target: self
+  power: 0
+  accuracy: 95
+  rage: 5
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_yingyongyizhi
+- id: skill_fatingzhinu
+  element: Flying
+  category: Special
+  target: opponent
+  power: 90
+  accuracy: 95
+  rage: 20
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_power2x_if_opponent_has_exceptional
+- id: skill_zuizhongshenpan
+  element: Normal
+  category: Status
+  target: opponent
+  power: 0
+  accuracy: 95
+  rage: 20
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_opponent_rage_30_if_opponent_has_tongjiling
+- id: skill_chengjizitai
+  element: Normal
+  category: Status
+  target: self
+  power: 0
+  accuracy: 100
+  rage: 10
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_raise_spa_1_stage
+- id: skill_kaowenzhe
+  element: Flying
+  category: Special
+  target: opponent
+  power: 70
+  accuracy: 95
+  rage: 10
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_opponent_kaowen
+- id: skill_jijiangfa
+  element: Flying
+  category: Special
+  target: opponent
+  power: 75
+  accuracy: 95
+  rage: 15
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_rage_opponent_45_if_opponent_has_kaowen
+    - effect_skill_add_mark_opponent_shoudaoshanghaizengjia_50_if_opponent_has_kaowen
+- id: skill_kaowenzhuoji
+  element: Flying
+  category: Physical
+  target: opponent
+  power: 80
+  accuracy: 95
+  rage: 20
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_damage_50_percent_if_last
+- id: skill_guhuofa
+  element: Flying
+  category: Special
+  target: opponent
+  power: 90
+  accuracy: 95
+  rage: 20
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_opponent_mingzhongxiajiang_15_if_opponent_has_kaowen_and_last
+- id: skill_yanshouzitai
+  element: Normal
+  category: Status
+  target: self
+  power: 0
+  accuracy: 95
+  rage: 20
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_raise_spd_1_stage
+    - effect_skill_raise_def_1_stage_if_opponent_has_kaowen
+- id: skill_dajifa
+  element: Flying
+  category: Special
+  target: opponent
+  power: 75
+  accuracy: 95
+  rage: 20
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_opponent_spa_1_stage_if_opponent_has_kaowen_and_last
+- id: skill_kaowensilie
+  element: Flying
+  category: Physical
+  target: opponent
+  power: 80
+  accuracy: 95
+  rage: 20
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_opponent_liuxie_40_if_last
+- id: skill_weixiafa
+  element: Flying
+  category: Special
+  target: opponent
+  power: 85
+  accuracy: 95
+  rage: 20
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_opponent_taobi_60_percent_if_opponent_has_kaowen
+- id: skill_kaowenlianfa
+  element: Flying
+  category: Physical
+  target: opponent
+  power: 35
+  accuracy: 95
+  rage: 25
+  sureHit: false
+  ignoreShield: false
+  multihit: 2
+  tags: []
+  effect:
+    - effect_skill_multihit_4_times_if_last
+- id: skill_xinlingzhenbao
+  element: Flying
+  category: Climax
+  target: opponent
+  power: 165
+  accuracy: 100
+  rage: 100
+  sureHit: true
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_opponent_zhixi_5_percent
+- id: skill_tongjilianxie
+  element: Flying
+  category: Special
+  target: opponent
+  power: 110
+  accuracy: 70
+  rage: 15
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_sure_hit_if_opponent_has_tongjiling
+- id: skill_bileiyanshen
+  element: Normal
+  category: Status
+  target: self
+  power: 0
+  accuracy: 95
+  rage: 10
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_bileiyanshen
+- id: skill_fangkongdong
+  element: Normal
+  category: Status
+  target: self
+  power: 0
+  accuracy: 95
+  rage: 20
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_clear_stage
+- id: skill_zuizhongcaijue
+  element: Normal
+  category: Special
+  target: opponent
+  power: 85
+  accuracy: 95
+  rage: 20
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_heal_self_quarter_if_opponent_has_kaowen_on_defeat_opponent
