--- a/data/species.yaml
+++ b/data/species.yaml
@@ -7869,7 +7869,6 @@
     - mark_ability_renzhen
   emblem:
     - mark_emblem_wuxing
-
 - id: pet_shasha
   num: 111
   element: Ground
@@ -7987,3 +7986,285 @@
     - mark_ability_rouxing
   emblem:
     - mark_emblem_rouxing
+- id: pet_fenfen
+  num: 166
+  element: Flying
+  baseStats:
+    hp: 78
+    atk: 120
+    spa: 114
+    def: 108
+    spd: 113
+    spe: 112
+  genderRatio: [10, 0]
+  heightRange: [21, 26]
+  weightRange: [13, 18]
+  learnable_skills:
+    - skill_id: skill_mengji
+      level: 1
+      hidden: false
+    - skill_id: skill_fuchong
+      level: 5
+      hidden: false
+    - skill_id: skill_yingyongjianxiao
+      level: 11
+      hidden: false
+    - skill_id: skill_tongjiling
+      level: 16
+      hidden: false
+  ability:
+    - mark_ability_tongji
+  emblem:
+    - mark_emblem_jina
+- id: pet_leifen
+  num: 167
+  element: Flying
+  baseStats:
+    hp: 118
+    atk: 150
+    spa: 139
+    def: 133
+    spd: 138
+    spe: 132
+  genderRatio: [10, 0]
+  heightRange: [45, 50]
+  weightRange: [24, 29]
+  learnable_skills:
+    - skill_id: skill_mengji
+      level: 1
+      hidden: false
+    - skill_id: skill_fuchong
+      level: 5
+      hidden: false
+    - skill_id: skill_yingyongjianxiao
+      level: 11
+      hidden: false
+    - skill_id: skill_tongjiling
+      level: 16
+      hidden: false
+    - skill_id: skill_kongjingtuxi
+      level: 21
+      hidden: false
+    - skill_id: skill_yiduanyazhi
+      level: 26
+      hidden: false
+    - skill_id: skill_kongjingweijiao
+      level: 31
+      hidden: false
+    - skill_id: skill_kongxijingjie
+      level: 36
+      hidden: false
+  ability:
+    - mark_ability_tongji
+  emblem:
+    - mark_emblem_jina
+- id: pet_geleifen
+  num: 168
+  element: Flying
+  baseStats:
+    hp: 178
+    atk: 180
+    spa: 164
+    def: 158
+    spd: 163
+    spe: 162
+  genderRatio: [10, 0]
+  heightRange: [86, 91]
+  weightRange: [48, 53]
+  learnable_skills:
+    - skill_id: skill_mengji
+      level: 1
+      hidden: false
+    - skill_id: skill_fuchong
+      level: 5
+      hidden: false
+    - skill_id: skill_yingyongjianxiao
+      level: 11
+      hidden: false
+    - skill_id: skill_tongjiling
+      level: 16
+      hidden: false
+    - skill_id: skill_kongjingtuxi
+      level: 21
+      hidden: false
+    - skill_id: skill_yiduanyazhi
+      level: 26
+      hidden: false
+    - skill_id: skill_kongjingweijiao
+      level: 31
+      hidden: false
+    - skill_id: skill_kongxijingjie
+      level: 36
+      hidden: false
+    - skill_id: skill_kongjingzhansha
+      level: 41
+      hidden: false
+    - skill_id: skill_yiduanjielan
+      level: 46
+      hidden: false
+    - skill_id: skill_kongjingqianna
+      level: 51
+      hidden: false
+    - skill_id: skill_yiduanzhuiji
+      level: 56
+      hidden: false
+    - skill_id: skill_kongzhongjianyu
+      level: 60
+      hidden: true
+    - skill_id: skill_kongjinglianxi
+      level: 60
+      hidden: true
+    - skill_id: skill_yingyongyizhi
+      level: 60
+      hidden: true
+    - skill_id: skill_fatingzhinu
+      level: 60
+      hidden: true
+    - skill_id: skill_zuizhongshenpan
+      level: 60
+      hidden: true
+  ability:
+    - mark_ability_tongji
+  emblem:
+    - mark_emblem_jina
+- id: pet_sasa
+  num: 181
+  element: Flying
+  baseStats:
+    hp: 81
+    atk: 115
+    spa: 116
+    def: 110
+    spd: 115
+    spe: 107
+  genderRatio: [0, 10]
+  heightRange: [23, 29]
+  weightRange: [16, 21]
+  learnable_skills:
+    - skill_id: skill_mengji
+      level: 1
+      hidden: false
+    - skill_id: skill_fuchong
+      level: 5
+      hidden: false
+    - skill_id: skill_chengjizitai
+      level: 11
+      hidden: false
+    - skill_id: skill_kaowenzhe
+      level: 16
+      hidden: false
+  ability:
+    - mark_ability_kaowen
+  emblem:
+    - mark_emblem_kaoda
+- id: pet_sabo
+  num: 182
+  element: Flying
+  baseStats:
+    hp: 121
+    atk: 140
+    spa: 146
+    def: 140
+    spd: 140
+    spe: 127
+  genderRatio: [0, 10]
+  heightRange: [48, 53]
+  weightRange: [30, 35]
+  learnable_skills:
+    - skill_id: skill_mengji
+      level: 1
+      hidden: false
+    - skill_id: skill_fuchong
+      level: 5
+      hidden: false
+    - skill_id: skill_chengjizitai
+      level: 11
+      hidden: false
+    - skill_id: skill_kaowenzhe
+      level: 16
+      hidden: false
+    - skill_id: skill_jijiangfa
+      level: 21
+      hidden: false
+    - skill_id: skill_kaowenzhuoji
+      level: 26
+      hidden: false
+    - skill_id: skill_guhuofa
+      level: 31
+      hidden: false
+    - skill_id: skill_yanshouzitai
+      level: 36
+      hidden: false
+  ability:
+    - mark_ability_kaowen
+  emblem:
+    - mark_emblem_kaoda
+- id: pet_saber
+  num: 183
+  element: Flying
+  baseStats:
+    hp: 181
+    atk: 165
+    spa: 176
+    def: 170
+    spd: 165
+    spe: 147
+  genderRatio: [0, 10]
+  heightRange: [89, 94]
+  weightRange: [71, 76]
+  learnable_skills:
+    - skill_id: skill_mengji
+      level: 1
+      hidden: false
+    - skill_id: skill_fuchong
+      level: 5
+      hidden: false
+    - skill_id: skill_chengjizitai
+      level: 11
+      hidden: false
+    - skill_id: skill_kaowenzhe
+      level: 16
+      hidden: false
+    - skill_id: skill_jijiangfa
+      level: 21
+      hidden: false
+    - skill_id: skill_kaowenzhuoji
+      level: 26
+      hidden: false
+    - skill_id: skill_guhuofa
+      level: 31
+      hidden: false
+    - skill_id: skill_yanshouzitai
+      level: 36
+      hidden: false
+    - skill_id: skill_dajifa
+      level: 41
+      hidden: false
+    - skill_id: skill_kaowensilie
+      level: 46
+      hidden: false
+    - skill_id: skill_weixiafa
+      level: 51
+      hidden: false
+    - skill_id: skill_kaowenlianfa
+      level: 56
+      hidden: false
+    - skill_id: skill_xinlingzhenbao
+      level: 60
+      hidden: true
+    - skill_id: skill_tongjilianxie
+      level: 60
+      hidden: true
+    - skill_id: skill_bileiyanshen
+      level: 60
+      hidden: true
+    - skill_id: skill_fangkongdong
+      level: 60
+      hidden: true
+    - skill_id: skill_zuizhongcaijue
+      level: 60
+      hidden: true
+  ability:
+    - mark_ability_kaowen
+  emblem:
+    - mark_emblem_kaoda
