--- a/resource/mark_image.yaml
+++ b/resource/mark_image.yaml
@@ -252,8 +252,12 @@ mark_global_chongqun: 'https://seer2-resource.yuuinih.com/png/markImage/20011.pn
 mark_zhanzhilingyu: 'https://seer2-resource.yuuinih.com/png/markImage/3281.png'
 mark_zhandoulingyu: 'https://seer2-resource.yuuinih.com/png/markImage/3282.png'
 mark_global_guzhanchang: 'https://seer2-resource.yuuinih.com/png/markImage/20012.png'
-mark_xifamihuo: "https://seer2-resource.yuuinih.com/png/markImage/3126.png"
+mark_xifamihuo: 'https://seer2-resource.yuuinih.com/png/markImage/3126.png'
 mark_zisun: 'https://seer2-resource.yuuinih.com/png/markImage/3099.png'
 mark_shaduzhixue: 'https://seer2-resource.yuuinih.com/png/markImage/3100.png'
 mark_shadu: 'https://seer2-resource.yuuinih.com/png/markImage/3101.png'
 mark_shaduhongxue: 'https://seer2-resource.yuuinih.com/png/markImage/3102.png'
+mark_tongjiling: 'https://seer2-resource.yuuinih.com/png/markImage/3165.png'
+mark_kaowen: 'https://seer2-resource.yuuinih.com/png/markImage/3169.png'
+mark_yingyongyizhi: 'https://seer2-resource.yuuinih.com/png/markImage/3166.png'
+mark_bileiyansheng: 'https://seer2-resource.yuuinih.com/png/markImage/3166.png'
