fix: mark_bileiyanshen image

--- a/resource/mark_image.yaml
+++ b/resource/mark_image.yaml
@@ -260,4 +260,4 @@ mark_shaduhongxue: 'https://seer2-resource.yuuinih.com/png/markImage/3102.png'
 mark_tongjiling: 'https://seer2-resource.yuuinih.com/png/markImage/3165.png'
 mark_kaowen: 'https://seer2-resource.yuuinih.com/png/markImage/3169.png'
 mark_yingyongyizhi: 'https://seer2-resource.yuuinih.com/png/markImage/3166.png'
-mark_bileiyansheng: 'https://seer2-resource.yuuinih.com/png/markImage/3166.png'
+mark_bileiyanshen: 'https://seer2-resource.yuuinih.com/png/markImage/3166.png'
